Fixing user registration and updating
